--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
-name = "test"
 publish = false
+name = "test"
 version = "0.1.0"
 authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
-edition = "2018"
+description = """
+Tests for lzfse_rust crate.
+"""
 license = "MIT OR Apache-2.0"
+homepage = "https://github.com/shampoofactory/lzfse_rust"
+repository = "https://github.com/shampoofactory/lzfse_rust"
+readme = "README.md"
+edition = "2018"
 
 [features]
 lzfse_ref = ["lzfse_sys"]
