--- a/test_kit/Cargo.toml
+++ b/test_kit/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "test_kit"
 publish = false
+name = "test_kit"
 version = "0.1.0"
 authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
-edition = "2018"
+description = """
+Testing utility functions for lzfse_rust crate.
+"""
 license = "MIT OR Apache-2.0"
+homepage = "https://github.com/shampoofactory/lzfse_rust"
+repository = "https://github.com/shampoofactory/lzfse_rust"
+readme = "README.md"
+edition = "2018"
