--- a/lzfoo/Cargo.toml
+++ b/lzfoo/Cargo.toml
@@ -18,7 +18,7 @@ name = "lzfoo"
 path = "main.rs"
 
 [dependencies]
-lzfse_rust = { path = ".." }
+lzfse_rust = { path = "..", version = "0.1.0" }
 
 [dependencies.clap]
 version = "2.33.0"
