--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -1,26 +1,27 @@
 [package]
-publish = false
-name = "test"
-version = "0.1.0"
 authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
 description = """
 Tests for lzfse_rust crate.
 """
-license = "MIT OR Apache-2.0"
-homepage = "https://github.com/shampoofactory/lzfse_rust"
-repository = "https://github.com/shampoofactory/lzfse_rust"
-readme = "README.md"
 edition = "2018"
+homepage = "https://github.com/shampoofactory/lzfse_rust"
+license = "MIT OR Apache-2.0"
+name = "test"
+publish = false
+readme = "README.md"
+repository = "https://github.com/shampoofactory/lzfse_rust"
+version = "0.1.0"
 
 [features]
-lzfse_ref = ["lzfse_sys"]
-large_data = []
+big_mem = []
 huge_data = []
+large_data = []
+lzfse_ref = ["lzfse_sys"]
 
 [dependencies]
-lzfse_sys = { path = "../lzfse_sys", optional = true }
+lzfse_sys = {path = "../lzfse_sys", optional = true}
 
 [dev-dependencies]
+lzfse_rust = {path = ".."}
 sha2 = "0.9.3"
-lzfse_rust = { path = ".." }
-test_kit = { path = "../test_kit" }
+test_kit = {path = "../test_kit"}
